CSS fix for K_SHIFT keys.

--- a/release/gff/gff_mesobe_fidelat/source/gff_mesobe_fidelat.css
+++ b/release/gff/gff_mesobe_fidelat/source/gff_mesobe_fidelat.css
@@ -161,7 +161,7 @@
 .phone div.kmw-key.kmw-key-shift[id$='K_LOPT'], .tablet div.kmw-key.kmw-key-shift[id$='K_LOPT'],
 .phone div.kmw-key.kmw-key-shift[id$='K_BKSP'], .tablet div.kmw-key.kmw-key-shift[id$='K_BKSP'],
 .phone div.kmw-key.kmw-key-shift[id$='K_ENTER'], .tablet div.kmw-key.kmw-key-shift[id$='K_ENTER'],
-.phone div.kmw-key.kmw-key-shift[id$='K_SHIFT'], .tablet div.kmw-key.kmw-key-shift[id$='K_SHIFT'],
+.phone div.kmw-key.kmw-key-default[id$='K_SHIFT'], .tablet div.kmw-key.kmw-key-default[id$='K_SHIFT'],
 .phone div.kmw-key.kmw-key-deadkey[id$='T_EMPTY'], .tablet div.kmw-key.kmw-key-deadkey[id$='T_EMPTY'],
 .kmw-keyboard-gff_mesobe_fidelat #default-U_12CB
 /* { background: #f3d6ce  ; color: black; } */
